fix appvendor issue
